objects/Amendment__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreement Amendments</relationshipLabel>
        <relationshipName>Agreeement_Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amendment_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Reason_Type__c</fullName>
        <label>Amendment Reason Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Amendment_Reason_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amendment_Reason__c</fullName>
        <description>Field used to prompt user to complete field when &apos;other&apos; is selected on amendment reason type</description>
        <label>Amendment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_date__c</fullName>
        <label>Effective date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Regulation__c</fullName>
        <label>Name of Regulation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Agreement</label>
        <referenceTo>Supporting_Agreement__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Amendment</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Amendment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <recordTypes>
        <fullName>Agreement_Amendment</fullName>
        <active>true</active>
        <description>Amendments made on an agreement</description>
        <label>Agreement Amendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Matter_Deal_Ammendment</fullName>
        <active>true</active>
        <description>Amendments made on a Matter/Deal</description>
        <label>Matter/Deal Ammendment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supporting_Agreement_Amendment</fullName>
        <active>true</active>
        <description>Amendments made on a supporting agreement</description>
        <label>Supporting Agreement Amendment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LIBRA_Documents_Uploaded_On_Amendment</fullName>
        <active>true</active>
        <description>Prompts CNSG to validate if the amendments documents have been uploaded.</description>
        <errorConditionFormula>IF(Amendment_Document_Uploaded__c = FALSE, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Please complete the Amendment Document Uploaded checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Other_Amendment_Reason_Type</fullName>
        <active>true</active>
        <description>Prompts CNSG user to complete the amendment reason field when &apos;other&apos; is selected on the the amendment reason type field.</description>
        <errorConditionFormula>AND(ISPICKVAL(Amendment_Reason_Type__c, &quot;Other&quot;) ,ISBLANK( 	Amendment_Reason__c))</errorConditionFormula>
        <errorMessage>Please complete the reason for the amendment?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Regulatory_Compliance_Reason_Type</fullName>
        <active>true</active>
        <description>Prompts CNSG user to complete the regulation name and effective date when the reason is &quot;Regulatory Compliance&quot;.</description>
        <errorConditionFormula>AND(ISPICKVAL(Amendment_Reason_Type__c, &quot;Regulatory Compliance&quot;), (ISBLANK(Name_of_Regulation__c) &amp;&amp; ISBLANK(Effective_date__c)))</errorConditionFormula>
        <errorMessage>Please complete the Name of Regulation and Effective Date fields</errorMessage>
    </validationRules>
</CustomObject>